# email-triage-env

./: .gitignore  Dockerfile  Makefile  README.md  baseline_scores.json  colab_setup.ipynb  deploy_hf.sh  docker_run.sh  inference.py  openenv.yaml  push_github.sh  pyproject.toml  requirements.txt  server.py  setup.sh
env/: __init__.py  data.py  environment.py  graders.py
server/: app.py
tests/: test_env.py
