[project]
name = "email-triage-env"
version = "1.0.0"
description = "A real-world email triage environment for AI agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:main"
inference = "inference:main" 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env"]

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
tasks = ["easy_triage", "medium_triage", "hard_triage"]